@@ -26,7 +26,7 @@ import net.minecraft.world.item.ItemStack;
 import net.minecraft.world.item.Items;
 import net.minecraftforge.registries.ForgeRegistries;
 
-import java.util.Collections;
+import java.util.List;
 import java.util.UUID;
 import java.util.concurrent.CompletableFuture;
 
@@ -80,34 +80,34 @@ public class MKUNpcProvider extends NpcDefinitionProvider {
     private NpcDefinition generateSeawovenWretch() {
         NpcDefinition def = new NpcDefinition(new ResourceLocation(MKUltra.MODID, "seawoven_wretch"),
                 MKUEntities.HYBOREAN_SKELETON_TYPE.getId(), null);
-        def.addOption(new FactionOption().setValue(MKFactions.UNDEAD_FACTION_NAME));
-        def.addOption(new RenderGroupOption().setValue(MKUSkeletons.SEAWOVEN_WRTECH_NAME));
-        def.addOption(new MKSizeOption().setValue(0.92f));
+        def.addOption(new FactionOption(MKFactions.UNDEAD_FACTION_NAME));
+        def.addOption(new RenderGroupOption(MKUSkeletons.SEAWOVEN_WRTECH_NAME));
+        def.addOption(new MKSizeOption(0.92f));
         def.addOption(new AttributesOption()
                 .addAttributeEntry(new NpcAttributeEntry(Attributes.MAX_HEALTH, 35.0))
                 .addAttributeEntry(new NpcAttributeEntry(MKAttributes.MAX_MANA, 35.0))
                 .addAttributeEntry(new NpcAttributeEntry(MKAttributes.MANA_REGEN, 2.0))
         );
-        def.addOption(new NameOption().setValue("A Seawoven Wretch"));
+        def.addOption(new NameOption("A Seawoven Wretch"));
         def.addOption(new AbilitiesOption().withAbilityOption(MKUAbilities.FROZEN_GRASP.get(), 1, 1.0));
-        def.addOption(MKUNpcGenUtils.GetSkillOptionForClass(MKUNpcGenUtils.NpcSkillClass.NECROMANCER));
+        def.addOption(MKUNpcGenUtils.getSkillOptionForClass(MKUNpcGenUtils.NpcSkillClass.NECROMANCER));
         return def;
     }
 
     private NpcDefinition generateSeawovenSkeleton() {
         NpcDefinition def = new NpcDefinition(new ResourceLocation(MKUltra.MODID, "seawoven_skeleton"),
                 MKUEntities.HYBOREAN_SKELETON_TYPE.getId(), null);
-        def.addOption(new FactionOption().setValue(MKFactions.UNDEAD_FACTION_NAME));
-        def.addOption(new RenderGroupOption().setValue(MKUSkeletons.SEAWOVEN_NAME));
-        def.addOption(new MKSizeOption().setValue(0.98f));
+        def.addOption(new FactionOption(MKFactions.UNDEAD_FACTION_NAME));
+        def.addOption(new RenderGroupOption(MKUSkeletons.SEAWOVEN_NAME));
+        def.addOption(new MKSizeOption(0.98f));
         def.addOption(new AttributesOption()
                 .addAttributeEntry(new NpcAttributeEntry(Attributes.MAX_HEALTH, 45.0))
                 .addAttributeEntry(new NpcAttributeEntry(MKAttributes.MAX_MANA, 45.0))
                 .addAttributeEntry(new NpcAttributeEntry(MKAttributes.MANA_REGEN, 2.0))
         );
-        def.addOption(new NameOption().setValue("A Seawoven Skeleton"));
+        def.addOption(new NameOption("A Seawoven Skeleton"));
         def.addOption(new AbilitiesOption().withAbilityOption(MKUAbilities.SEAFURY.get(), 1, 1.0));
-        def.addOption(MKUNpcGenUtils.GetSkillOptionForClass(MKUNpcGenUtils.NpcSkillClass.NECROMANCER));
+        def.addOption(MKUNpcGenUtils.getSkillOptionForClass(MKUNpcGenUtils.NpcSkillClass.NECROMANCER));
         ResourceLocation lootTierName = new ResourceLocation(MKUltra.MODID, "seawoven_skeleton");
         def.addOption(new ExtraLootOption()
                 .withLootOptions(new LootOptionEntry(LootSlotManager.ITEMS.getName(), lootTierName, 1.0))
@@ -121,20 +121,20 @@ public class MKUNpcProvider extends NpcDefinitionProvider {
     private NpcDefinition generateSkeletalLock() {
         NpcDefinition def = new NpcDefinition(new ResourceLocation(MKUltra.MODID, "skeletal_lock"),
                 MKUEntities.HYBOREAN_SKELETON_TYPE.getId(), null);
-        def.addOption(new FactionOption().setValue(MKUFactions.NECROTIDE_CULTISTS_NAME));
-        def.addOption(new RenderGroupOption().setValue(MKUSkeletons.BASIC_NAME));
-        def.addOption(new MKSizeOption().setValue(1.0f));
+        def.addOption(new FactionOption(MKUFactions.NECROTIDE_CULTISTS_NAME));
+        def.addOption(new RenderGroupOption(MKUSkeletons.BASIC_NAME));
+        def.addOption(new MKSizeOption(1.0f));
         def.addOption(new AttributesOption()
                 .addAttributeEntry(new NpcAttributeEntry(Attributes.MAX_HEALTH, 50.0))
                 .addAttributeEntry(new NpcAttributeEntry(MKAttributes.MAX_MANA, 50.0))
                 .addAttributeEntry(new NpcAttributeEntry(MKAttributes.MANA_REGEN, 2.0))
         );
-        def.addOption(new NameOption().setValue("A Skeletal Lock"));
+        def.addOption(new NameOption("A Skeletal Lock"));
         def.addOption(new AbilitiesOption()
                 .withAbilityOption(MKUAbilities.SHADOW_BOLT.get(), 1, 1.0)
                 .withAbilityOption(MKUAbilities.SHADOW_PULSE.get(), 2, 1.0)
         );
-        def.addOption(MKUNpcGenUtils.GetSkillOptionForClass(MKUNpcGenUtils.NpcSkillClass.MAGE));
+        def.addOption(MKUNpcGenUtils.getSkillOptionForClass(MKUNpcGenUtils.NpcSkillClass.MAGE));
         def.addOption(new NotableOption());
         return def;
     }
@@ -142,20 +142,20 @@ public class MKUNpcProvider extends NpcDefinitionProvider {
     private NpcDefinition generateNecrotideGolem() {
         NpcDefinition def = new NpcDefinition(new ResourceLocation(MKUltra.MODID, "necrotide_golem"),
                 MKUEntities.GOLEM_TYPE.getId(), null);
-        def.addOption(new FactionOption().setValue(MKUFactions.NECROTIDE_CULTISTS_NAME));
-        def.addOption(new RenderGroupOption().setValue(MKUGolems.NECROTIDE_GOLEM_NAME));
-        def.addOption(new MKSizeOption().setValue(1.25f));
+        def.addOption(new FactionOption(MKUFactions.NECROTIDE_CULTISTS_NAME));
+        def.addOption(new RenderGroupOption(MKUGolems.NECROTIDE_GOLEM_NAME));
+        def.addOption(new MKSizeOption(1.25f));
         def.addOption(new AttributesOption()
                 .addAttributeEntry(new NpcAttributeEntry(Attributes.MAX_HEALTH, 500.0))
                 .addAttributeEntry(new NpcAttributeEntry(MKAttributes.MAX_MANA, 500.0))
                 .addAttributeEntry(new NpcAttributeEntry(MKAttributes.MANA_REGEN, 5.0))
         );
-        def.addOption(new NameOption().setValue("A Necrotide Construction"));
+        def.addOption(new NameOption("A Necrotide Construction"));
         def.addOption(new AbilitiesOption()
                 .withAbilityOption(MKUAbilities.SHADOW_BOLT.get(), 2, 1.0)
                 .withAbilityOption(MKUAbilities.NECROTIDE_GOLEM_BEAM.get(), 1, 1.0)
         );
-        def.addOption(MKUNpcGenUtils.GetSkillOptionForClass(MKUNpcGenUtils.NpcSkillClass.NECROMANCER));
+        def.addOption(MKUNpcGenUtils.getSkillOptionForClass(MKUNpcGenUtils.NpcSkillClass.NECROMANCER));
         def.addOption(new NotableOption());
         ResourceLocation lootTierName = new ResourceLocation(MKUltra.MODID, "necrotide_golem");
         def.addOption(new ExtraLootOption()
@@ -170,21 +170,21 @@ public class MKUNpcProvider extends NpcDefinitionProvider {
     private NpcDefinition generateNecrotideCultistAcolyte() {
         NpcDefinition def = new NpcDefinition(new ResourceLocation(MKUltra.MODID, "necrotide_acolyte"),
                 MKUEntities.HUMAN_TYPE.getId(), null);
-        def.addOption(new FactionOption().setValue(MKUFactions.NECROTIDE_CULTISTS_NAME));
-        def.addOption(new RenderGroupOption().setValue(MKUHumans.NECROTIDE_CULTIST_1_NAME));
-        def.addOption(new MKSizeOption().setValue(0.95f));
+        def.addOption(new FactionOption(MKUFactions.NECROTIDE_CULTISTS_NAME));
+        def.addOption(new RenderGroupOption(MKUHumans.NECROTIDE_CULTIST_1_NAME));
+        def.addOption(new MKSizeOption(0.95f));
         def.addOption(new AttributesOption()
                 .addAttributeEntry(new NpcAttributeEntry(Attributes.MAX_HEALTH, 50.0))
                 .addAttributeEntry(new NpcAttributeEntry(MKAttributes.MAX_MANA, 50.0))
                 .addAttributeEntry(new NpcAttributeEntry(MKAttributes.MANA_REGEN, 2.0))
         );
-        def.addOption(new NameOption().setValue("A Necrotide Acolyte"));
+        def.addOption(new NameOption("A Necrotide Acolyte"));
         def.addOption(new AbilitiesOption()
                 .withAbilityOption(MKUAbilities.SHADOW_BOLT.get(), 1, 1.0)
                 .withAbilityOption(MKUAbilities.DROWN.get(), 2, 0.5)
                 .withAbilityOption(MKUAbilities.SHADOW_PULSE.get(), 3, 0.5)
         );
-        def.addOption(MKUNpcGenUtils.GetSkillOptionForClass(MKUNpcGenUtils.NpcSkillClass.MAGE));
+        def.addOption(MKUNpcGenUtils.getSkillOptionForClass(MKUNpcGenUtils.NpcSkillClass.MAGE));
         def.addOption(new FactionBattlecryOption());
         return def;
     }
@@ -192,9 +192,9 @@ public class MKUNpcProvider extends NpcDefinitionProvider {
     private NpcDefinition generateNecrotideCultist() {
         NpcDefinition def = new NpcDefinition(new ResourceLocation(MKUltra.MODID, "necrotide_cultist"),
                 MKUEntities.HUMAN_TYPE.getId(), null);
-        def.addOption(new FactionOption().setValue(MKUFactions.NECROTIDE_CULTISTS_NAME));
-        def.addOption(new RenderGroupOption().setValue(MKUHumans.NECROTIDE_CULTIST_SKULL_1_NAME));
-        def.addOption(new MKSizeOption().setValue(1.05f));
+        def.addOption(new FactionOption(MKUFactions.NECROTIDE_CULTISTS_NAME));
+        def.addOption(new RenderGroupOption(MKUHumans.NECROTIDE_CULTIST_SKULL_1_NAME));
+        def.addOption(new MKSizeOption(1.05f));
         def.addOption(new AttributesOption()
                 .addAttributeEntry(new NpcAttributeEntry(Attributes.MAX_HEALTH, 125.0))
                 .addAttributeEntry(new NpcAttributeEntry(MKAttributes.MAX_MANA, 125.0))
@@ -207,7 +207,7 @@ public class MKUNpcProvider extends NpcDefinitionProvider {
                 .withAbilityOption(MKUAbilities.SHADOW_PULSE.get(), 3, 1.0)
                 .withAbilityOption(MKUAbilities.NECROTIDE_WARRIOR_SUMMON.get(), 4, 1.0)
         );
-        def.addOption(MKUNpcGenUtils.GetSkillOptionForClass(MKUNpcGenUtils.NpcSkillClass.NECROMANCER));
+        def.addOption(MKUNpcGenUtils.getSkillOptionForClass(MKUNpcGenUtils.NpcSkillClass.NECROMANCER));
         def.addOption(new FactionBattlecryOption());
         return def;
     }
@@ -215,15 +215,15 @@ public class MKUNpcProvider extends NpcDefinitionProvider {
     private NpcDefinition generateNecrotideSkeletalWarrior() {
         NpcDefinition def = new NpcDefinition(new ResourceLocation(MKUltra.MODID, "necrotide_skeletal_warrior"),
                 MKUEntities.HYBOREAN_SKELETON_TYPE.getId(), null);
-        def.addOption(new FactionOption().setValue(MKUFactions.NECROTIDE_CULTISTS_NAME));
-        def.addOption(new MKSizeOption().setValue(1.0f));
-        def.addOption(new RenderGroupOption().setValue(MKUSkeletons.BASIC_NAME));
+        def.addOption(new FactionOption(MKUFactions.NECROTIDE_CULTISTS_NAME));
+        def.addOption(new MKSizeOption(1.0f));
+        def.addOption(new RenderGroupOption(MKUSkeletons.BASIC_NAME));
         def.addOption(new AttributesOption()
                 .addAttributeEntry(new NpcAttributeEntry(Attributes.MAX_HEALTH, 65.0))
                 .addAttributeEntry(new NpcAttributeEntry(MKAttributes.MAX_MANA, 65.0))
                 .addAttributeEntry(new NpcAttributeEntry(MKAttributes.MANA_REGEN, 2.0))
         );
-        def.addOption(new NameOption().setValue("Skeleton Warrior"));
+        def.addOption(new NameOption("Skeleton Warrior"));
         EquipmentOption equipOption = new EquipmentOption();
         equipOption.addItemChoice(EquipmentSlot.MAINHAND,
                 new NpcItemChoice(new ItemStack(ForgeRegistries.ITEMS.getValue(
@@ -241,28 +241,28 @@ public class MKUNpcProvider extends NpcDefinitionProvider {
                 new NpcItemChoice(new ItemStack(ForgeRegistries.ITEMS.getValue(
                         new ResourceLocation("mkweapons:warhammer_iron"))), 1.0, 0.0f));
         def.addOption(equipOption);
-        def.addOption(MKUNpcGenUtils.GetSkillOptionForClass(MKUNpcGenUtils.NpcSkillClass.WARRIOR));
+        def.addOption(MKUNpcGenUtils.getSkillOptionForClass(MKUNpcGenUtils.NpcSkillClass.WARRIOR));
         return def;
     }
 
     private NpcDefinition generateNecrotideSkeletalArcher() {
         NpcDefinition def = new NpcDefinition(new ResourceLocation(MKUltra.MODID, "necrotide_skeletal_archer"),
                 MKUEntities.HYBOREAN_SKELETON_TYPE.getId(), null);
-        def.addOption(new FactionOption().setValue(MKUFactions.NECROTIDE_CULTISTS_NAME));
-        def.addOption(new MKSizeOption().setValue(0.95f));
-        def.addOption(new RenderGroupOption().setValue(MKUSkeletons.HYBOREAN_ARCHER_NAME));
+        def.addOption(new FactionOption(MKUFactions.NECROTIDE_CULTISTS_NAME));
+        def.addOption(new MKSizeOption(0.95f));
+        def.addOption(new RenderGroupOption(MKUSkeletons.HYBOREAN_ARCHER_NAME));
         def.addOption(new AttributesOption()
                 .addAttributeEntry(new NpcAttributeEntry(Attributes.MAX_HEALTH, 30.0))
                 .addAttributeEntry(new NpcAttributeEntry(MKAttributes.MAX_MANA, 30.0))
                 .addAttributeEntry(new NpcAttributeEntry(MKAttributes.MANA_REGEN, 1.0))
         );
-        def.addOption(new NameOption().setValue("Skeleton Archer"));
+        def.addOption(new NameOption("Skeleton Archer"));
         EquipmentOption equipOption = new EquipmentOption();
         equipOption.addItemChoice(EquipmentSlot.MAINHAND,
                 new NpcItemChoice(new ItemStack(ForgeRegistries.ITEMS.getValue(
                         new ResourceLocation("mkweapons:longbow_iron"))), 1.0, 0.0f));
         def.addOption(equipOption);
-        def.addOption(MKUNpcGenUtils.GetSkillOptionForClass(MKUNpcGenUtils.NpcSkillClass.ARCHER));
+        def.addOption(MKUNpcGenUtils.getSkillOptionForClass(MKUNpcGenUtils.NpcSkillClass.ARCHER));
         return def;
     }
 
@@ -270,9 +270,9 @@ public class MKUNpcProvider extends NpcDefinitionProvider {
     private NpcDefinition generateClericAcolyte() {
         NpcDefinition def = new NpcDefinition(new ResourceLocation(MKUltra.MODID, "solangian_acolyte"),
                 MKUEntities.HUMAN_TYPE.getId(), null);
-        def.addOption(new FactionOption().setValue(MKUFactions.SEE_OF_SOLANG_NAME));
-        def.addOption(new RenderGroupOption().setValue(MKUHumans.CLERIC_1_NAME));
-        def.addOption(new MKSizeOption().setValue(1.05f));
+        def.addOption(new FactionOption(MKUFactions.SEE_OF_SOLANG_NAME));
+        def.addOption(new RenderGroupOption(MKUHumans.CLERIC_1_NAME));
+        def.addOption(new MKSizeOption(1.05f));
         def.addOption(new AttributesOption()
                 .addAttributeEntry(new NpcAttributeEntry(Attributes.MAX_HEALTH, 150.0))
                 .addAttributeEntry(new NpcAttributeEntry(MKAttributes.MAX_MANA, 150.0))
@@ -285,7 +285,7 @@ public class MKUNpcProvider extends NpcDefinitionProvider {
                 .withAbilityOption(MKUAbilities.SMITE.get(), 2, 1.0)
                 .withAbilityOption(MKUAbilities.GALVANIZE.get(), 3, 1.0)
         );
-        def.addOption(new DialogueOption().setValue(new ResourceLocation(MKUltra.MODID, "intro_cleric_acolyte")));
+        def.addOption(new DialogueOption(new ResourceLocation(MKUltra.MODID, "intro_cleric_acolyte")));
         EquipmentOption equipOption = new EquipmentOption();
         equipOption.addItemChoice(EquipmentSlot.MAINHAND,
                 new NpcItemChoice(new ItemStack(ForgeRegistries.ITEMS.getValue(
@@ -296,16 +296,16 @@ public class MKUNpcProvider extends NpcDefinitionProvider {
                 .withTrainingOption(MKUAbilities.SMITE.get(), new HasEntitlementRequirement(MKUEntitlements.IntroClericTier1.get()))
         );
         def.addOption(equipOption);
-        def.addOption(MKUNpcGenUtils.GetSkillOptionForClass(MKUNpcGenUtils.NpcSkillClass.CLERIC));
+        def.addOption(MKUNpcGenUtils.getSkillOptionForClass(MKUNpcGenUtils.NpcSkillClass.CLERIC));
         return def;
     }
 
     private NpcDefinition generateCleric() {
         NpcDefinition def = new NpcDefinition(new ResourceLocation(MKUltra.MODID, "solangian_cleric"),
                 MKUEntities.HUMAN_TYPE.getId(), null);
-        def.addOption(new FactionOption().setValue(MKUFactions.SEE_OF_SOLANG_NAME));
-        def.addOption(new RenderGroupOption().setValue(MKUHumans.CLERIC_1_NAME));
-        def.addOption(new MKSizeOption().setValue(1.05f));
+        def.addOption(new FactionOption(MKUFactions.SEE_OF_SOLANG_NAME));
+        def.addOption(new RenderGroupOption(MKUHumans.CLERIC_1_NAME));
+        def.addOption(new MKSizeOption(1.05f));
         def.addOption(new AttributesOption()
                 .addAttributeEntry(new NpcAttributeEntry(Attributes.MAX_HEALTH, 500.0))
                 .addAttributeEntry(new NpcAttributeEntry(MKAttributes.MAX_MANA, 500.0))
@@ -334,24 +334,24 @@ public class MKUNpcProvider extends NpcDefinitionProvider {
                 .withTrainingOption(MKUAbilities.INSPIRE.get(), new HasEntitlementRequirement(MKUEntitlements.ClericTier3.get()))
         );
         def.addOption(equipOption);
-        def.addOption(MKUNpcGenUtils.GetSkillOptionForClass(MKUNpcGenUtils.NpcSkillClass.CLERIC));
+        def.addOption(MKUNpcGenUtils.getSkillOptionForClass(MKUNpcGenUtils.NpcSkillClass.CLERIC));
         return def;
     }
 
     private NpcDefinition generateForlornGhost() {
         NpcDefinition def = new NpcDefinition(new ResourceLocation(MKUltra.MODID, "forlorn_ghost"),
                 MKUEntities.HUMAN_TYPE.getId(), null);
-        def.addOption(new FactionOption().setValue(MKUFactions.SEE_OF_SOLANG_NAME));
-        def.addOption(new RenderGroupOption().setValue(MKUHumans.GHOST_1_NAME));
-        def.addOption(new MKSizeOption().setValue(1.0f));
+        def.addOption(new FactionOption(MKUFactions.SEE_OF_SOLANG_NAME));
+        def.addOption(new RenderGroupOption(MKUHumans.GHOST_1_NAME));
+        def.addOption(new MKSizeOption(1.0f));
         def.addOption(new AttributesOption()
                 .addAttributeEntry(new NpcAttributeEntry(Attributes.MAX_HEALTH, 100.0))
                 .addAttributeEntry(new NpcAttributeEntry(MKAttributes.MAX_MANA, 100.0))
                 .addAttributeEntry(new NpcAttributeEntry(MKAttributes.MANA_REGEN, 3.0))
         );
-        def.addOption(new NameOption().setValue("Forlorn Ghost"));
+        def.addOption(new NameOption("Forlorn Ghost"));
         def.addOption(new NotableOption());
-        def.addOption(new GhostOption().setValue(0.7f));
+        def.addOption(new GhostOption().setGhostTranslucency(0.7f));
 //        def.addOption(new AbilitiesOption()
 //                .withAbilityOption(HealAbility.INSTANCE, 1, 1.0)
 //                .withAbilityOption(SmiteAbility.INSTANCE, 2, 1.0)
@@ -361,23 +361,23 @@ public class MKUNpcProvider extends NpcDefinitionProvider {
 //                new NpcItemChoice(new ItemStack(ForgeRegistries.ITEMS.getValue(
 //                        new ResourceLocation("mkweapons:mace_iron"))), 1.0, 0.0f));
 //        def.addOption(equipOption);
-        def.addOption(MKUNpcGenUtils.GetSkillOptionForClass(MKUNpcGenUtils.NpcSkillClass.FIGHTER));
+        def.addOption(MKUNpcGenUtils.getSkillOptionForClass(MKUNpcGenUtils.NpcSkillClass.FIGHTER));
         return def;
     }
 
     private NpcDefinition generateAncientPriestGhost() {
         NpcDefinition def = new NpcDefinition(new ResourceLocation(MKUltra.MODID, "ancient_priest_ghost"),
                 MKUEntities.HUMAN_TYPE.getId(), null);
-        def.addOption(new FactionOption().setValue(MKFactions.UNDEAD_FACTION_NAME));
-        def.addOption(new RenderGroupOption().setValue(MKUHumans.GHOST_LOOK_CLEAN_NAME));
-        def.addOption(new MKSizeOption().setValue(1.0f));
+        def.addOption(new FactionOption(MKFactions.UNDEAD_FACTION_NAME));
+        def.addOption(new RenderGroupOption(MKUHumans.GHOST_LOOK_CLEAN_NAME));
+        def.addOption(new MKSizeOption(1.0f));
         def.addOption(new AttributesOption()
                 .addAttributeEntry(new NpcAttributeEntry(Attributes.MAX_HEALTH, 100.0))
                 .addAttributeEntry(new NpcAttributeEntry(MKAttributes.MAX_MANA, 100.0))
                 .addAttributeEntry(new NpcAttributeEntry(MKAttributes.MANA_REGEN, 3.0))
         );
-        def.addOption(new NameOption().setValue("An Ancient Priest"));
-        def.addOption(new GhostOption().setValue(0.7f));
+        def.addOption(new NameOption("An Ancient Priest"));
+        def.addOption(new GhostOption().setGhostTranslucency(0.7f));
 //        def.addOption(new AbilitiesOption()
 //                .withAbilityOption(HealAbility.INSTANCE, 1, 1.0)
 //                .withAbilityOption(SmiteAbility.INSTANCE, 2, 1.0)
@@ -396,7 +396,7 @@ public class MKUNpcProvider extends NpcDefinitionProvider {
                 new NpcItemChoice(new ItemStack(MKUItems.ancientPriestLeggings.get()), 1.0, 0.05f));
         equipOption.addItemChoice(EquipmentSlot.FEET,
                 new NpcItemChoice(new ItemStack(MKUItems.ancientPriestBoots.get()), 1.0, 0.05f));
-        def.addOption(MKUNpcGenUtils.GetSkillOptionForClass(MKUNpcGenUtils.NpcSkillClass.FIGHTER));
+        def.addOption(MKUNpcGenUtils.getSkillOptionForClass(MKUNpcGenUtils.NpcSkillClass.FIGHTER));
         def.addOption(equipOption);
         return def;
     }
@@ -404,9 +404,9 @@ public class MKUNpcProvider extends NpcDefinitionProvider {
     private NpcDefinition generateTempleGuard2() {
         NpcDefinition def = new NpcDefinition(new ResourceLocation(MKUltra.MODID, "solangian_temple_guard_2"),
                 MKUEntities.HUMAN_TYPE.getId(), null);
-        def.addOption(new FactionOption().setValue(MKUFactions.SEE_OF_SOLANG_NAME));
-        def.addOption(new RenderGroupOption().setValue(MKUHumans.TEMPLE_GUARD_2_NAME));
-        def.addOption(new MKSizeOption().setValue(1.0f));
+        def.addOption(new FactionOption(MKUFactions.SEE_OF_SOLANG_NAME));
+        def.addOption(new RenderGroupOption(MKUHumans.TEMPLE_GUARD_2_NAME));
+        def.addOption(new MKSizeOption(1.0f));
         def.addOption(new AttributesOption()
                 .addAttributeEntry(new NpcAttributeEntry(Attributes.MAX_HEALTH, 300.0))
                 .addAttributeEntry(new NpcAttributeEntry(MKAttributes.MAX_MANA, 300.0))
@@ -424,16 +424,16 @@ public class MKUNpcProvider extends NpcDefinitionProvider {
                 new NpcItemChoice(new ItemStack(ForgeRegistries.ITEMS.getValue(
                         new ResourceLocation("mkweapons:spear_gold"))), 1.0, 0.0f));
         def.addOption(equipOption);
-        def.addOption(MKUNpcGenUtils.GetSkillOptionForClass(MKUNpcGenUtils.NpcSkillClass.PALADIN));
+        def.addOption(MKUNpcGenUtils.getSkillOptionForClass(MKUNpcGenUtils.NpcSkillClass.PALADIN));
         return def;
     }
 
     private NpcDefinition generateTempleGuard() {
         NpcDefinition def = new NpcDefinition(new ResourceLocation(MKUltra.MODID, "solangian_temple_guard"),
                 MKUEntities.HUMAN_TYPE.getId(), null);
-        def.addOption(new FactionOption().setValue(MKUFactions.SEE_OF_SOLANG_NAME));
-        def.addOption(new RenderGroupOption().setValue(MKUHumans.TEMPLE_GUARD_1_NAME));
-        def.addOption(new MKSizeOption().setValue(1.0f));
+        def.addOption(new FactionOption(MKUFactions.SEE_OF_SOLANG_NAME));
+        def.addOption(new RenderGroupOption(MKUHumans.TEMPLE_GUARD_1_NAME));
+        def.addOption(new MKSizeOption(1.0f));
         def.addOption(new AttributesOption()
                 .addAttributeEntry(new NpcAttributeEntry(Attributes.MAX_HEALTH, 250.0))
                 .addAttributeEntry(new NpcAttributeEntry(MKAttributes.MAX_MANA, 250.0))
@@ -450,16 +450,16 @@ public class MKUNpcProvider extends NpcDefinitionProvider {
                 new NpcItemChoice(new ItemStack(ForgeRegistries.ITEMS.getValue(
                         new ResourceLocation("mkweapons:spear_gold"))), 1.0, 0.0f));
         def.addOption(equipOption);
-        def.addOption(MKUNpcGenUtils.GetSkillOptionForClass(MKUNpcGenUtils.NpcSkillClass.PALADIN));
+        def.addOption(MKUNpcGenUtils.getSkillOptionForClass(MKUNpcGenUtils.NpcSkillClass.PALADIN));
         return def;
     }
 
     private NpcDefinition generateClericApprentice() {
         NpcDefinition def = new NpcDefinition(new ResourceLocation(MKUltra.MODID, "solangian_apprentice"),
                 MKUEntities.HUMAN_TYPE.getId(), null);
-        def.addOption(new FactionOption().setValue(MKUFactions.SEE_OF_SOLANG_NAME));
-        def.addOption(new RenderGroupOption().setValue(MKUHumans.CLERIC_2_NAME));
-        def.addOption(new MKSizeOption().setValue(0.85f));
+        def.addOption(new FactionOption(MKUFactions.SEE_OF_SOLANG_NAME));
+        def.addOption(new RenderGroupOption(MKUHumans.CLERIC_2_NAME));
+        def.addOption(new MKSizeOption(0.85f));
         def.addOption(new AttributesOption()
                 .addAttributeEntry(new NpcAttributeEntry(Attributes.MAX_HEALTH, 100.0))
                 .addAttributeEntry(new NpcAttributeEntry(MKAttributes.MAX_MANA, 100.0))
@@ -476,16 +476,16 @@ public class MKUNpcProvider extends NpcDefinitionProvider {
                 new NpcItemChoice(new ItemStack(ForgeRegistries.ITEMS.getValue(
                         new ResourceLocation("mkweapons:mace_iron"))), 1.0, 0.0f));
         def.addOption(equipOption);
-        def.addOption(MKUNpcGenUtils.GetSkillOptionForClass(MKUNpcGenUtils.NpcSkillClass.CLERIC));
+        def.addOption(MKUNpcGenUtils.getSkillOptionForClass(MKUNpcGenUtils.NpcSkillClass.CLERIC));
         return def;
     }
 
     private NpcDefinition generateNetherMageInitiate() {
         NpcDefinition def = new NpcDefinition(new ResourceLocation(MKUltra.MODID, "nether_mage_initiate"),
                 MKUEntities.HUMAN_TYPE.getId(), null);
-        def.addOption(new FactionOption().setValue(MKUFactions.NETHER_MAGE_NAME));
-        def.addOption(new RenderGroupOption().setValue(MKUHumans.NETHER_MAGE_1_NAME));
-        def.addOption(new MKSizeOption().setValue(0.90f));
+        def.addOption(new FactionOption(MKUFactions.NETHER_MAGE_NAME));
+        def.addOption(new RenderGroupOption(MKUHumans.NETHER_MAGE_1_NAME));
+        def.addOption(new MKSizeOption(0.90f));
         def.addOption(new AttributesOption()
                 .addAttributeEntry(new NpcAttributeEntry(Attributes.MAX_HEALTH, 150.0))
                 .addAttributeEntry(new NpcAttributeEntry(MKAttributes.MAX_MANA, 150.0))
@@ -507,18 +507,18 @@ public class MKUNpcProvider extends NpcDefinitionProvider {
                 .withTrainingOption(MKUAbilities.EMBER.get(), new HasEntitlementRequirement(MKUEntitlements.IntroNetherMageTier1.get()))
                 .withTrainingOption(MKUAbilities.FIRE_ARMOR.get(), new HasEntitlementRequirement(MKUEntitlements.IntroNetherMageTier1.get()))
         );
-        def.addOption(new DialogueOption().setValue(new ResourceLocation(MKUltra.MODID, "intro_nether_mage_initiate")));
+        def.addOption(new DialogueOption(new ResourceLocation(MKUltra.MODID, "intro_nether_mage_initiate")));
         def.addOption(new QuestOfferingOption(new ResourceLocation("mkultra", "nether_mage_intro")));
-        def.addOption(MKUNpcGenUtils.GetSkillOptionForClass(MKUNpcGenUtils.NpcSkillClass.MAGE));
+        def.addOption(MKUNpcGenUtils.getSkillOptionForClass(MKUNpcGenUtils.NpcSkillClass.MAGE));
         return def;
     }
 
     private NpcDefinition generateBurningSkeleton() {
         NpcDefinition def = new NpcDefinition(new ResourceLocation(MKUltra.MODID, "burning_skeleton"),
                 MKUEntities.HYBOREAN_SKELETON_TYPE.getId(), null);
-        def.addOption(new FactionOption().setValue(MKUFactions.HYBOREAN_DEAD_NAME));
-        def.addOption(new MKSizeOption().setValue(1.0f));
-        def.addOption(new RenderGroupOption().setValue(MKUSkeletons.BURNING_NAME));
+        def.addOption(new FactionOption(MKUFactions.HYBOREAN_DEAD_NAME));
+        def.addOption(new MKSizeOption(1.0f));
+        def.addOption(new RenderGroupOption(MKUSkeletons.BURNING_NAME));
         def.addOption(new AttributesOption()
                 .addAttributeEntry(new NpcAttributeEntry(Attributes.MAX_HEALTH, 250.0))
                 .addAttributeEntry(new NpcAttributeEntry(Attributes.ARMOR, 10.0))
@@ -527,7 +527,7 @@ public class MKUNpcProvider extends NpcDefinitionProvider {
                 .addAttributeEntry(new NpcAttributeEntry(MKAttributes.MAX_MANA, 250.0))
                 .addAttributeEntry(new NpcAttributeEntry(MKAttributes.MANA_REGEN, 2.0))
         );
-        def.addOption(new NameOption().setValue("Burning Revenant"));
+        def.addOption(new NameOption("Burning Revenant"));
         EquipmentOption equipOption = new EquipmentOption();
         equipOption.addItemChoice(EquipmentSlot.MAINHAND,
                 new NpcItemChoice(new ItemStack(ForgeRegistries.ITEMS.getValue(
@@ -556,10 +556,10 @@ public class MKUNpcProvider extends NpcDefinitionProvider {
                                         .withTransitionSound(MKUSounds.spell_dark_8.getId())
                         )
         );
-        def.addOption(new ExperienceOption().setValue(50));
-        def.addOption(new ParticleEffectsOption().withEffects(Collections.singletonList(
+        def.addOption(new ExperienceOption(50));
+        def.addOption(new ParticleEffectsOption(List.of(
                 new BoneEffectInstance(UUID.fromString("3e7496f1-f5bf-45e6-b8e5-64192633ae9f"),
-                        BipedSkeleton.HEAD_BONE_NAME, new ResourceLocation(MKUltra.MODID, "burning_skeleton_head"))
+                        new ResourceLocation(MKUltra.MODID, "burning_skeleton_head"), BipedSkeleton.HEAD_BONE_NAME)
         )));
         ResourceLocation lootTierName = new ResourceLocation(MKUltra.MODID, "burning_skeleton");
         def.addOption(new ExtraLootOption().withLootOptions(new LootOptionEntry(LootSlotManager.MAIN_HAND.getName(), lootTierName, 1.0))
@@ -568,22 +568,22 @@ public class MKUNpcProvider extends NpcDefinitionProvider {
                 .withDropChances(1)
                 .withNoLootChance(0.1)
                 .withNoLootIncrease(0.0));
-        def.addOption(MKUNpcGenUtils.GetSkillOptionForClass(MKUNpcGenUtils.NpcSkillClass.MAGE));
+        def.addOption(MKUNpcGenUtils.getSkillOptionForClass(MKUNpcGenUtils.NpcSkillClass.MAGE));
         return def;
     }
 
     private NpcDefinition generateDecayingZombiePiglin() {
         NpcDefinition def = new NpcDefinition(new ResourceLocation(MKUltra.MODID, "decaying_piglin"),
                 MKUEntities.ZOMBIFIED_PIGLIN_TYPE.getId(), null);
-        def.addOption(new FactionOption().setValue(MKUFactions.IMPERIAL_DEAD_NAME));
-        def.addOption(new MKSizeOption().setValue(0.9f));
-        def.addOption(new RenderGroupOption().setValue(MKUPiglins.ZOMBIE_PIG_NAME));
+        def.addOption(new FactionOption(MKUFactions.IMPERIAL_DEAD_NAME));
+        def.addOption(new MKSizeOption(0.9f));
+        def.addOption(new RenderGroupOption(MKUPiglins.ZOMBIE_PIG_NAME));
         def.addOption(new AttributesOption()
                 .addAttributeEntry(new NpcAttributeEntry(Attributes.MAX_HEALTH, 20.0))
                 .addAttributeEntry(new NpcAttributeEntry(MKAttributes.MAX_MANA, 20.0))
                 .addAttributeEntry(new NpcAttributeEntry(MKAttributes.MANA_REGEN, 1.0))
         );
-        def.addOption(new NameOption().setValue("Decaying Zombie"));
+        def.addOption(new NameOption("Decaying Zombie"));
         EquipmentOption equipOption = new EquipmentOption();
         equipOption.addItemChoice(EquipmentSlot.MAINHAND,
                 new NpcItemChoice(new ItemStack(ForgeRegistries.ITEMS.getValue(
@@ -591,44 +591,44 @@ public class MKUNpcProvider extends NpcDefinitionProvider {
         equipOption.addItemChoice(EquipmentSlot.MAINHAND,
                 new NpcItemChoice(ItemStack.EMPTY, 1.0, 0.0f));
         def.addOption(equipOption);
-        def.addOption(new ExperienceOption().setValue(5));
-        def.addOption(MKUNpcGenUtils.GetSkillOptionForClass(MKUNpcGenUtils.NpcSkillClass.FIGHTER));
+        def.addOption(new ExperienceOption(5));
+        def.addOption(MKUNpcGenUtils.getSkillOptionForClass(MKUNpcGenUtils.NpcSkillClass.FIGHTER));
         return def;
     }
 
     private NpcDefinition generateDecayingZombieArcher() {
         NpcDefinition def = new NpcDefinition(new ResourceLocation(MKUltra.MODID, "decaying_piglin_archer"),
                 MKUEntities.ZOMBIFIED_PIGLIN_TYPE.getId(), null);
-        def.addOption(new FactionOption().setValue(MKUFactions.IMPERIAL_DEAD_NAME));
-        def.addOption(new MKSizeOption().setValue(0.85f));
-        def.addOption(new RenderGroupOption().setValue(MKUPiglins.ZOMBIE_PIG_NAME));
+        def.addOption(new FactionOption(MKUFactions.IMPERIAL_DEAD_NAME));
+        def.addOption(new MKSizeOption(0.85f));
+        def.addOption(new RenderGroupOption(MKUPiglins.ZOMBIE_PIG_NAME));
         def.addOption(new AttributesOption()
                 .addAttributeEntry(new NpcAttributeEntry(Attributes.MAX_HEALTH, 15.0))
                 .addAttributeEntry(new NpcAttributeEntry(MKAttributes.MAX_MANA, 15.0))
                 .addAttributeEntry(new NpcAttributeEntry(MKAttributes.MANA_REGEN, 1.0))
         );
-        def.addOption(new NameOption().setValue("Shambling Archer"));
+        def.addOption(new NameOption("Shambling Archer"));
         EquipmentOption equipOption = new EquipmentOption();
         equipOption.addItemChoice(EquipmentSlot.MAINHAND,
                 new NpcItemChoice(new ItemStack(Items.BOW), 1.0, 0.0f));
         def.addOption(equipOption);
-        def.addOption(new ExperienceOption().setValue(5));
-        def.addOption(MKUNpcGenUtils.GetSkillOptionForClass(MKUNpcGenUtils.NpcSkillClass.ARCHER));
+        def.addOption(new ExperienceOption(5));
+        def.addOption(MKUNpcGenUtils.getSkillOptionForClass(MKUNpcGenUtils.NpcSkillClass.ARCHER));
         return def;
     }
 
     private NpcDefinition generateCrumblingTrooperMage() {
         NpcDefinition def = new NpcDefinition(new ResourceLocation(MKUltra.MODID, "crumbling_trooper_mage"),
                 MKUEntities.ZOMBIFIED_PIGLIN_TYPE.getId(), null);
-        def.addOption(new FactionOption().setValue(MKUFactions.IMPERIAL_DEAD_NAME));
-        def.addOption(new MKSizeOption().setValue(0.95f));
-        def.addOption(new RenderGroupOption().setValue(MKUPiglins.ZOMBIE_PIG_MAGUS_NAME));
+        def.addOption(new FactionOption(MKUFactions.IMPERIAL_DEAD_NAME));
+        def.addOption(new MKSizeOption(0.95f));
+        def.addOption(new RenderGroupOption(MKUPiglins.ZOMBIE_PIG_MAGUS_NAME));
         def.addOption(new AttributesOption()
                 .addAttributeEntry(new NpcAttributeEntry(Attributes.MAX_HEALTH, 30.0))
                 .addAttributeEntry(new NpcAttributeEntry(MKAttributes.MAX_MANA, 30.0))
                 .addAttributeEntry(new NpcAttributeEntry(MKAttributes.MANA_REGEN, 1.0))
         );
-        def.addOption(new NameOption().setValue("Crumbling Trooper Mage"));
+        def.addOption(new NameOption("Crumbling Trooper Mage"));
         EquipmentOption equipOption = new EquipmentOption();
         equipOption.addItemChoice(EquipmentSlot.MAINHAND,
                 new NpcItemChoice(new ItemStack(ForgeRegistries.ITEMS.getValue(
@@ -645,25 +645,25 @@ public class MKUNpcProvider extends NpcDefinitionProvider {
                 .withNoLootChance(0.1)
                 .withNoLootIncrease(0.25)
         );
-        def.addOption(new ExperienceOption().setValue(10));
-        def.addOption(MKUNpcGenUtils.GetSkillOptionForClass(MKUNpcGenUtils.NpcSkillClass.MAGE));
+        def.addOption(new ExperienceOption(10));
+        def.addOption(MKUNpcGenUtils.getSkillOptionForClass(MKUNpcGenUtils.NpcSkillClass.MAGE));
         return def;
     }
 
     private NpcDefinition generateTrooperExecution() {
         NpcDefinition def = new NpcDefinition(new ResourceLocation(MKUltra.MODID, "trooper_executioner"),
                 MKUEntities.ZOMBIFIED_PIGLIN_TYPE.getId(), null);
-        def.addOption(new FactionOption().setValue(MKUFactions.IMPERIAL_DEAD_NAME));
-        def.addOption(new MKSizeOption().setValue(1.0f));
-        def.addOption(new RenderGroupOption().setValue(MKUPiglins.DESTROYED_SKELETAL_TROOPER_NAME));
+        def.addOption(new FactionOption(MKUFactions.IMPERIAL_DEAD_NAME));
+        def.addOption(new MKSizeOption(1.0f));
+        def.addOption(new RenderGroupOption(MKUPiglins.DESTROYED_SKELETAL_TROOPER_NAME));
         def.addOption(new MKComboSettingsOption().setComboDelay(20).setComboCount(3));
         def.addOption(new AttributesOption()
                 .addAttributeEntry(new NpcAttributeEntry(Attributes.MAX_HEALTH, 180.0))
                 .addAttributeEntry(new NpcAttributeEntry(MKAttributes.MAX_MANA, 180.0))
                 .addAttributeEntry(new NpcAttributeEntry(MKAttributes.MANA_REGEN, 2.0))
         );
-        def.addOption(new NameOption().setValue("Trooper Executioner"));
-        def.addOption(new LungeSpeedOption().setValue(0.75));
+        def.addOption(new NameOption("Trooper Executioner"));
+        def.addOption(new LungeSpeedOption(0.75));
         def.addOption(new NotableOption());
         EquipmentOption equipOption = new EquipmentOption();
         equipOption.addItemChoice(EquipmentSlot.MAINHAND,
@@ -683,17 +683,17 @@ public class MKUNpcProvider extends NpcDefinitionProvider {
                 .withNoLootChance(0.2)
                 .withNoLootIncrease(0.25)
         );
-        def.addOption(new ExperienceOption().setValue(20));
-        def.addOption(MKUNpcGenUtils.GetSkillOptionForClass(MKUNpcGenUtils.NpcSkillClass.FIGHTER));
+        def.addOption(new ExperienceOption(20));
+        def.addOption(MKUNpcGenUtils.getSkillOptionForClass(MKUNpcGenUtils.NpcSkillClass.FIGHTER));
         return def;
     }
 
     private NpcDefinition generateImperialMagus() {
         NpcDefinition def = new NpcDefinition(new ResourceLocation(MKUltra.MODID, "imperial_magus"),
                 MKUEntities.ZOMBIFIED_PIGLIN_TYPE.getId(), null);
-        def.addOption(new FactionOption().setValue(MKUFactions.IMPERIAL_DEAD_NAME));
-        def.addOption(new MKSizeOption().setValue(1.0f));
-        def.addOption(new RenderGroupOption().setValue(MKUPiglins.SKELETAL_MAGE_NAME));
+        def.addOption(new FactionOption(MKUFactions.IMPERIAL_DEAD_NAME));
+        def.addOption(new MKSizeOption(1.0f));
+        def.addOption(new RenderGroupOption(MKUPiglins.SKELETAL_MAGE_NAME));
         def.addOption(new AttributesOption()
                 .addAttributeEntry(new NpcAttributeEntry(Attributes.MAX_HEALTH, 150.0))
                 .addAttributeEntry(new NpcAttributeEntry(MKAttributes.MAX_MANA, 150.0))
@@ -701,7 +701,7 @@ public class MKUNpcProvider extends NpcDefinitionProvider {
         );
         def.addOption(new FactionNameOption().setTitle("Imperial Magus").setHasLastName(true));
         def.addOption(new NotableOption());
-        def.addOption(new LungeSpeedOption().setValue(0.5));
+        def.addOption(new LungeSpeedOption(0.5));
         EquipmentOption equipOption = new EquipmentOption();
         equipOption.addItemChoice(EquipmentSlot.MAINHAND,
                 new NpcItemChoice(new ItemStack(ForgeRegistries.ITEMS.getValue(
@@ -725,17 +725,17 @@ public class MKUNpcProvider extends NpcDefinitionProvider {
                 .withNoLootChance(0.2)
                 .withNoLootIncrease(0.25)
         );
-        def.addOption(new ExperienceOption().setValue(25));
-        def.addOption(MKUNpcGenUtils.GetSkillOptionForClass(MKUNpcGenUtils.NpcSkillClass.MAGE));
+        def.addOption(new ExperienceOption(25));
+        def.addOption(MKUNpcGenUtils.getSkillOptionForClass(MKUNpcGenUtils.NpcSkillClass.MAGE));
         return def;
     }
 
     private NpcDefinition generateTrooperCaptain() {
         NpcDefinition def = new NpcDefinition(new ResourceLocation(MKUltra.MODID, "trooper_captain"),
                 MKUEntities.ZOMBIFIED_PIGLIN_TYPE.getId(), null);
-        def.addOption(new FactionOption().setValue(MKUFactions.IMPERIAL_DEAD_NAME));
-        def.addOption(new MKSizeOption().setValue(1.2f));
-        def.addOption(new RenderGroupOption().setValue(MKUPiglins.SKELETAL_TROOPER_NAME));
+        def.addOption(new FactionOption(MKUFactions.IMPERIAL_DEAD_NAME));
+        def.addOption(new MKSizeOption(1.2f));
+        def.addOption(new RenderGroupOption(MKUPiglins.SKELETAL_TROOPER_NAME));
         def.addOption(new MKComboSettingsOption().setComboDelay(10).setComboCount(3));
         def.addOption(new AttributesOption()
                 .addAttributeEntry(new NpcAttributeEntry(Attributes.MAX_HEALTH, 100.0))
@@ -743,7 +743,7 @@ public class MKUNpcProvider extends NpcDefinitionProvider {
                 .addAttributeEntry(new NpcAttributeEntry(MKAttributes.MANA_REGEN, 2.0))
         );
         def.addOption(new FactionNameOption().setTitle("Captain").setHasLastName(true));
-        def.addOption(new LungeSpeedOption().setValue(1.0));
+        def.addOption(new LungeSpeedOption(1.0));
         def.addOption(new NotableOption());
         EquipmentOption equipOption = new EquipmentOption();
         equipOption.addItemChoice(EquipmentSlot.MAINHAND,
@@ -769,23 +769,23 @@ public class MKUNpcProvider extends NpcDefinitionProvider {
                 .withNoLootChance(0.2)
                 .withNoLootIncrease(0.25)
         );
-        def.addOption(new ExperienceOption().setValue(25));
-        def.addOption(MKUNpcGenUtils.GetSkillOptionForClass(MKUNpcGenUtils.NpcSkillClass.PALADIN));
+        def.addOption(new ExperienceOption(25));
+        def.addOption(MKUNpcGenUtils.getSkillOptionForClass(MKUNpcGenUtils.NpcSkillClass.PALADIN));
         return def;
     }
 
     private NpcDefinition generateSkeletalTrooperMage() {
         NpcDefinition def = new NpcDefinition(new ResourceLocation(MKUltra.MODID, "skeletal_trooper_mage"),
                 MKUEntities.ZOMBIFIED_PIGLIN_TYPE.getId(), null);
-        def.addOption(new FactionOption().setValue(MKUFactions.IMPERIAL_DEAD_NAME));
-        def.addOption(new MKSizeOption().setValue(1.0f));
-        def.addOption(new RenderGroupOption().setValue(MKUPiglins.DESTROYED_SKELETAL_MAGE_NAME));
+        def.addOption(new FactionOption(MKUFactions.IMPERIAL_DEAD_NAME));
+        def.addOption(new MKSizeOption(1.0f));
+        def.addOption(new RenderGroupOption(MKUPiglins.DESTROYED_SKELETAL_MAGE_NAME));
         def.addOption(new AttributesOption()
                 .addAttributeEntry(new NpcAttributeEntry(Attributes.MAX_HEALTH, 50.0))
                 .addAttributeEntry(new NpcAttributeEntry(MKAttributes.MAX_MANA, 50.0))
                 .addAttributeEntry(new NpcAttributeEntry(MKAttributes.MANA_REGEN, 2.0))
         );
-        def.addOption(new NameOption().setValue("Skeletal Magus"));
+        def.addOption(new NameOption("Skeletal Magus"));
         EquipmentOption equipOption = new EquipmentOption();
         equipOption.addItemChoice(EquipmentSlot.MAINHAND,
                 new NpcItemChoice(new ItemStack(ForgeRegistries.ITEMS.getValue(
@@ -806,24 +806,24 @@ public class MKUNpcProvider extends NpcDefinitionProvider {
 //                .withNoLootChance(0.1)
 //                .withNoLootIncrease(0.25)
 //        );
-        def.addOption(new ExperienceOption().setValue(15));
-        def.addOption(MKUNpcGenUtils.GetSkillOptionForClass(MKUNpcGenUtils.NpcSkillClass.MAGE));
+        def.addOption(new ExperienceOption(15));
+        def.addOption(MKUNpcGenUtils.getSkillOptionForClass(MKUNpcGenUtils.NpcSkillClass.MAGE));
         return def;
     }
 
     private NpcDefinition generateCrumblingTrooper() {
         NpcDefinition def = new NpcDefinition(new ResourceLocation(MKUltra.MODID, "crumbling_trooper"),
                 MKUEntities.ZOMBIFIED_PIGLIN_TYPE.getId(), null);
-        def.addOption(new FactionOption().setValue(MKUFactions.IMPERIAL_DEAD_NAME));
-        def.addOption(new MKSizeOption().setValue(1.1f));
-        def.addOption(new RenderGroupOption().setValue(MKUPiglins.ZOMBIE_PIG_TROOPER_NAME));
+        def.addOption(new FactionOption(MKUFactions.IMPERIAL_DEAD_NAME));
+        def.addOption(new MKSizeOption(1.1f));
+        def.addOption(new RenderGroupOption(MKUPiglins.ZOMBIE_PIG_TROOPER_NAME));
         def.addOption(new AttributesOption()
                 .addAttributeEntry(new NpcAttributeEntry(Attributes.MAX_HEALTH, 50.0))
                 .addAttributeEntry(new NpcAttributeEntry(MKAttributes.MAX_MANA, 50.0))
                 .addAttributeEntry(new NpcAttributeEntry(MKAttributes.MANA_REGEN, 1.0))
         );
-        def.addOption(new NameOption().setValue("Crumbling Trooper"));
-        def.addOption(new LungeSpeedOption().setValue(0.35));
+        def.addOption(new NameOption("Crumbling Trooper"));
+        def.addOption(new LungeSpeedOption(0.35));
         EquipmentOption equipOption = new EquipmentOption();
         equipOption.addItemChoice(EquipmentSlot.MAINHAND,
                 new NpcItemChoice(new ItemStack(ForgeRegistries.ITEMS.getValue(
@@ -846,8 +846,8 @@ public class MKUNpcProvider extends NpcDefinitionProvider {
                 .withNoLootChance(0.1)
                 .withNoLootIncrease(0.25)
         );
-        def.addOption(new ExperienceOption().setValue(10));
-        def.addOption(MKUNpcGenUtils.GetSkillOptionForClass(MKUNpcGenUtils.NpcSkillClass.FIGHTER));
+        def.addOption(new ExperienceOption(10));
+        def.addOption(MKUNpcGenUtils.getSkillOptionForClass(MKUNpcGenUtils.NpcSkillClass.FIGHTER));
         return def;
     }
 
@@ -855,15 +855,15 @@ public class MKUNpcProvider extends NpcDefinitionProvider {
     private NpcDefinition generateHyboreanWarrior() {
         NpcDefinition def = new NpcDefinition(new ResourceLocation(MKUltra.MODID, "hyborean_warrior"),
                 MKUEntities.HYBOREAN_SKELETON_TYPE.getId(), null);
-        def.addOption(new FactionOption().setValue(MKFactions.UNDEAD_FACTION_NAME));
-        def.addOption(new MKSizeOption().setValue(1.0f));
-        def.addOption(new RenderGroupOption().setValue(MKUSkeletons.HYBOREAN_WARRIOR_NAME));
+        def.addOption(new FactionOption(MKFactions.UNDEAD_FACTION_NAME));
+        def.addOption(new MKSizeOption(1.0f));
+        def.addOption(new RenderGroupOption(MKUSkeletons.HYBOREAN_WARRIOR_NAME));
         def.addOption(new AttributesOption()
                 .addAttributeEntry(new NpcAttributeEntry(Attributes.MAX_HEALTH, 30.0))
                 .addAttributeEntry(new NpcAttributeEntry(MKAttributes.MAX_MANA, 30.0))
                 .addAttributeEntry(new NpcAttributeEntry(MKAttributes.MANA_REGEN, 1.0))
         );
-        def.addOption(new NameOption().setValue("Hyborean Warrior"));
+        def.addOption(new NameOption("Hyborean Warrior"));
         EquipmentOption equipOption = new EquipmentOption();
         equipOption.addItemChoice(EquipmentSlot.MAINHAND,
                 new NpcItemChoice(new ItemStack(ForgeRegistries.ITEMS.getValue(
@@ -912,22 +912,22 @@ public class MKUNpcProvider extends NpcDefinitionProvider {
         equipOption.addItemChoice(EquipmentSlot.FEET,
                 new NpcItemChoice(new ItemStack(MKUItems.ancientBronzeBoots.get()), 1.0, 1.1f));
         def.addOption(equipOption);
-        def.addOption(MKUNpcGenUtils.GetSkillOptionForClass(MKUNpcGenUtils.NpcSkillClass.WARRIOR));
+        def.addOption(MKUNpcGenUtils.getSkillOptionForClass(MKUNpcGenUtils.NpcSkillClass.WARRIOR));
         return def;
     }
 
     private NpcDefinition generateHyboreanArcher() {
         NpcDefinition def = new NpcDefinition(new ResourceLocation(MKUltra.MODID, "hyborean_archer"),
                 MKUEntities.HYBOREAN_SKELETON_TYPE.getId(), null);
-        def.addOption(new FactionOption().setValue(MKFactions.UNDEAD_FACTION_NAME));
-        def.addOption(new MKSizeOption().setValue(0.95f));
-        def.addOption(new RenderGroupOption().setValue(MKUSkeletons.HYBOREAN_ARCHER_NAME));
+        def.addOption(new FactionOption(MKFactions.UNDEAD_FACTION_NAME));
+        def.addOption(new MKSizeOption(0.95f));
+        def.addOption(new RenderGroupOption(MKUSkeletons.HYBOREAN_ARCHER_NAME));
         def.addOption(new AttributesOption()
                 .addAttributeEntry(new NpcAttributeEntry(Attributes.MAX_HEALTH, 25.0))
                 .addAttributeEntry(new NpcAttributeEntry(MKAttributes.MAX_MANA, 25.0))
                 .addAttributeEntry(new NpcAttributeEntry(MKAttributes.MANA_REGEN, 1.0))
         );
-        def.addOption(new NameOption().setValue("Decaying Archer"));
+        def.addOption(new NameOption("Decaying Archer"));
         EquipmentOption equipOption = new EquipmentOption();
         equipOption.addItemChoice(EquipmentSlot.MAINHAND,
                 new NpcItemChoice(new ItemStack(ForgeRegistries.ITEMS.getValue(
@@ -936,22 +936,22 @@ public class MKUNpcProvider extends NpcDefinitionProvider {
                 new NpcItemChoice(new ItemStack(ForgeRegistries.ITEMS.getValue(
                         new ResourceLocation("mkultra:longbow_bronze"))), 4.0, 1.1f));
         def.addOption(equipOption);
-        def.addOption(MKUNpcGenUtils.GetSkillOptionForClass(MKUNpcGenUtils.NpcSkillClass.ARCHER));
+        def.addOption(MKUNpcGenUtils.getSkillOptionForClass(MKUNpcGenUtils.NpcSkillClass.ARCHER));
         return def;
     }
 
     private NpcDefinition generateHyboreanSorcererQueen() {
         NpcDefinition def = new NpcDefinition(new ResourceLocation(MKUltra.MODID, "hyborean_sorcerer_queen"),
                 MKUEntities.HYBOREAN_SKELETON_TYPE.getId(), null);
-        def.addOption(new FactionOption().setValue(MKFactions.UNDEAD_FACTION_NAME));
-        def.addOption(new MKSizeOption().setValue(1.1f));
-        def.addOption(new RenderGroupOption().setValue(MKUSkeletons.SORCERER_QUEEN_NAME));
+        def.addOption(new FactionOption(MKFactions.UNDEAD_FACTION_NAME));
+        def.addOption(new MKSizeOption(1.1f));
+        def.addOption(new RenderGroupOption(MKUSkeletons.SORCERER_QUEEN_NAME));
         def.addOption(new AttributesOption()
                 .addAttributeEntry(new NpcAttributeEntry(Attributes.MAX_HEALTH, 110.0))
                 .addAttributeEntry(new NpcAttributeEntry(MKAttributes.MAX_MANA, 110.0))
                 .addAttributeEntry(new NpcAttributeEntry(MKAttributes.MANA_REGEN, 3.0))
         );
-        def.addOption(new NameOption().setValue("Hyborean Sorcerer Queen"));
+        def.addOption(new NameOption("Hyborean Sorcerer Queen"));
         EquipmentOption equipOption = new EquipmentOption();
         equipOption.addItemChoice(EquipmentSlot.MAINHAND,
                 new NpcItemChoice(new ItemStack(ForgeRegistries.ITEMS.getValue(
@@ -977,22 +977,22 @@ public class MKUNpcProvider extends NpcDefinitionProvider {
                 .withNoLootIncrease(0.25)
         );
         def.addOption(new MKComboSettingsOption().setComboCount(5).setComboDelay(60));
-        def.addOption(MKUNpcGenUtils.GetSkillOptionForClass(MKUNpcGenUtils.NpcSkillClass.MAGE));
+        def.addOption(MKUNpcGenUtils.getSkillOptionForClass(MKUNpcGenUtils.NpcSkillClass.MAGE));
         return def;
     }
 
     private NpcDefinition generateAncientKing() {
         NpcDefinition def = new NpcDefinition(new ResourceLocation(MKUltra.MODID, "an_ancient_king"),
                 MKUEntities.HYBOREAN_SKELETON_TYPE.getId(), null);
-        def.addOption(new FactionOption().setValue(MKFactions.UNDEAD_FACTION_NAME));
-        def.addOption(new MKSizeOption().setValue(1.15f));
-        def.addOption(new RenderGroupOption().setValue(MKUSkeletons.ANCIENT_KING_NAME));
+        def.addOption(new FactionOption(MKFactions.UNDEAD_FACTION_NAME));
+        def.addOption(new MKSizeOption(1.15f));
+        def.addOption(new RenderGroupOption(MKUSkeletons.ANCIENT_KING_NAME));
         def.addOption(new AttributesOption()
                 .addAttributeEntry(new NpcAttributeEntry(Attributes.MAX_HEALTH, 165.0))
                 .addAttributeEntry(new NpcAttributeEntry(MKAttributes.MAX_MANA, 165.0))
                 .addAttributeEntry(new NpcAttributeEntry(MKAttributes.MANA_REGEN, 3.0))
         );
-        def.addOption(new NameOption().setValue("An Ancient King"));
+        def.addOption(new NameOption("An Ancient King"));
         EquipmentOption equipOption = new EquipmentOption();
         equipOption.addItemChoice(EquipmentSlot.MAINHAND,
                 new NpcItemChoice(new ItemStack(ForgeRegistries.ITEMS.getValue(
@@ -1041,22 +1041,22 @@ public class MKUNpcProvider extends NpcDefinitionProvider {
                 .withNoLootIncrease(0.25)
         );
         def.addOption(new MKComboSettingsOption().setComboCount(2).setComboDelay(10));
-        def.addOption(MKUNpcGenUtils.GetSkillOptionForClass(MKUNpcGenUtils.NpcSkillClass.PALADIN));
+        def.addOption(MKUNpcGenUtils.getSkillOptionForClass(MKUNpcGenUtils.NpcSkillClass.PALADIN));
         return def;
     }
 
     private NpcDefinition generateHyboreanSorcerer() {
         NpcDefinition def = new NpcDefinition(new ResourceLocation(MKUltra.MODID, "hyborean_sorcerer"),
                 MKUEntities.HYBOREAN_SKELETON_TYPE.getId(), null);
-        def.addOption(new FactionOption().setValue(MKFactions.UNDEAD_FACTION_NAME));
-        def.addOption(new MKSizeOption().setValue(0.9f));
-        def.addOption(new RenderGroupOption().setValue(MKUSkeletons.SORCERER_NAME));
+        def.addOption(new FactionOption(MKFactions.UNDEAD_FACTION_NAME));
+        def.addOption(new MKSizeOption(0.9f));
+        def.addOption(new RenderGroupOption(MKUSkeletons.SORCERER_NAME));
         def.addOption(new AttributesOption()
                 .addAttributeEntry(new NpcAttributeEntry(Attributes.MAX_HEALTH, 40.0))
                 .addAttributeEntry(new NpcAttributeEntry(MKAttributes.MAX_MANA, 40.0))
                 .addAttributeEntry(new NpcAttributeEntry(MKAttributes.MANA_REGEN, 2.0))
         );
-        def.addOption(new NameOption().setValue("Hyborean Sorcerer"));
+        def.addOption(new NameOption("Hyborean Sorcerer"));
         EquipmentOption equipOption = new EquipmentOption();
         equipOption.addItemChoice(EquipmentSlot.MAINHAND,
                 new NpcItemChoice(new ItemStack(ForgeRegistries.ITEMS.getValue(
@@ -1070,22 +1070,22 @@ public class MKUNpcProvider extends NpcDefinitionProvider {
                 .withAbilityOption(MKUAbilities.FIREBALL.get(), 1, 1.0)
                 .withAbilityOption(MKUAbilities.EMBER.get(), 3, 1.0)
         );
-        def.addOption(MKUNpcGenUtils.GetSkillOptionForClass(MKUNpcGenUtils.NpcSkillClass.MAGE));
+        def.addOption(MKUNpcGenUtils.getSkillOptionForClass(MKUNpcGenUtils.NpcSkillClass.MAGE));
         return def;
     }
 
     private NpcDefinition generateHyboreanHonorGuard() {
         NpcDefinition def = new NpcDefinition(new ResourceLocation(MKUltra.MODID, "hyborean_honor_guard"),
                 MKUEntities.HYBOREAN_SKELETON_TYPE.getId(), null);
-        def.addOption(new FactionOption().setValue(MKFactions.UNDEAD_FACTION_NAME));
-        def.addOption(new MKSizeOption().setValue(1.0f));
-        def.addOption(new RenderGroupOption().setValue(MKUSkeletons.HONOR_GUARD_NAME));
+        def.addOption(new FactionOption(MKFactions.UNDEAD_FACTION_NAME));
+        def.addOption(new MKSizeOption(1.0f));
+        def.addOption(new RenderGroupOption(MKUSkeletons.HONOR_GUARD_NAME));
         def.addOption(new AttributesOption()
                 .addAttributeEntry(new NpcAttributeEntry(Attributes.MAX_HEALTH, 65.0))
                 .addAttributeEntry(new NpcAttributeEntry(MKAttributes.MAX_MANA, 65.0))
                 .addAttributeEntry(new NpcAttributeEntry(MKAttributes.MANA_REGEN, 1.0))
         );
-        def.addOption(new NameOption().setValue("Undying Honor Guard"));
+        def.addOption(new NameOption("Undying Honor Guard"));
         EquipmentOption equipOption = new EquipmentOption();
         equipOption.addItemChoice(EquipmentSlot.MAINHAND,
                 new NpcItemChoice(new ItemStack(ForgeRegistries.ITEMS.getValue(
@@ -1119,16 +1119,16 @@ public class MKUNpcProvider extends NpcDefinitionProvider {
                 .withAbilityOption(MKUAbilities.SEVER_TENDON.get(), 3, 1.0)
         );
         def.addOption(new MKComboSettingsOption().setComboCount(4).setComboDelay(30));
-        def.addOption(MKUNpcGenUtils.GetSkillOptionForClass(MKUNpcGenUtils.NpcSkillClass.PALADIN));
+        def.addOption(MKUNpcGenUtils.getSkillOptionForClass(MKUNpcGenUtils.NpcSkillClass.PALADIN));
         return def;
     }
 
     private NpcDefinition generateGreenSmith() {
         NpcDefinition def = new NpcDefinition(new ResourceLocation(MKUltra.MODID, "green_smith"),
                 MKUEntities.ORC_TYPE.getId(), null);
-        def.addOption(new FactionOption().setValue(MKUFactions.GREEN_KNIGHT_FACTION_NAME));
-        def.addOption(new MKSizeOption().setValue(1.5f));
-        def.addOption(new RenderGroupOption().setValue(MKUOrcs.GREEN_SMITH_NAME));
+        def.addOption(new FactionOption(MKUFactions.GREEN_KNIGHT_FACTION_NAME));
+        def.addOption(new MKSizeOption(1.5f));
+        def.addOption(new RenderGroupOption(MKUOrcs.GREEN_SMITH_NAME));
         def.addOption(new AbilitiesOption()
                 .withAbilityOption(MKUAbilities.SKIN_LIKE_WOOD.get(), 1, 1.0)
                 .withAbilityOption(MKUAbilities.NATURES_REMEDY.get(), 2, 1.0)
@@ -1138,7 +1138,7 @@ public class MKUNpcProvider extends NpcDefinitionProvider {
                 .addAttributeEntry(new NpcAttributeEntry(MKAttributes.MAX_MANA, 400.0))
                 .addAttributeEntry(new NpcAttributeEntry(MKAttributes.MANA_REGEN, 4.0))
         );
-        def.addOption(new NameOption().setValue("Green Smith"));
+        def.addOption(new NameOption("Green Smith"));
         def.addOption(new NotableOption());
         EquipmentOption equipOption = new EquipmentOption();
         equipOption.addItemChoice(EquipmentSlot.MAINHAND,
@@ -1146,7 +1146,7 @@ public class MKUNpcProvider extends NpcDefinitionProvider {
                         new ResourceLocation("mkweapons:warhammer_iron"))), 1.0, 0.0f));
         def.addOption(equipOption);
         def.addOption(new QuestOfferingOption(new ResourceLocation("mkultra", "trooper_armor")));
-        def.addOption(MKUNpcGenUtils.GetSkillOptionForClass(MKUNpcGenUtils.NpcSkillClass.PALADIN));
+        def.addOption(MKUNpcGenUtils.getSkillOptionForClass(MKUNpcGenUtils.NpcSkillClass.PALADIN));
         return def;
     }
 
@@ -1154,9 +1154,9 @@ public class MKUNpcProvider extends NpcDefinitionProvider {
     private NpcDefinition generateGreenLady() {
         NpcDefinition def = new NpcDefinition(new ResourceLocation(MKUltra.MODID, "green_lady"),
                 MKUEntities.ORC_TYPE.getId(), null);
-        def.addOption(new FactionOption().setValue(MKUFactions.GREEN_KNIGHT_FACTION_NAME));
-        def.addOption(new MKSizeOption().setValue(1.1f));
-        def.addOption(new RenderGroupOption().setValue(MKUOrcs.GREEN_LADY_NAME));
+        def.addOption(new FactionOption(MKUFactions.GREEN_KNIGHT_FACTION_NAME));
+        def.addOption(new MKSizeOption(1.1f));
+        def.addOption(new RenderGroupOption(MKUOrcs.GREEN_LADY_NAME));
         def.addOption(new AbilityTrainingOption()
                 .withTrainingOption(MKUAbilities.SKIN_LIKE_WOOD.get(), new HasEntitlementRequirement(MKUEntitlements.GreenKnightTier1.get()))
                 .withTrainingOption(MKUAbilities.NATURES_REMEDY.get(), new HasEntitlementRequirement(MKUEntitlements.GreenKnightTier1.get()))
@@ -1171,25 +1171,25 @@ public class MKUNpcProvider extends NpcDefinitionProvider {
                 .withAbilityOption(MKUAbilities.NATURES_REMEDY.get(), 3, 1.0)
                 .withAbilityOption(MKUAbilities.CLEANSING_SEED.get(), 5, 1.0)
         );
-        def.addOption(new DialogueOption().setValue(new ResourceLocation(MKUltra.MODID, "open_abilities")));
+        def.addOption(new DialogueOption(new ResourceLocation(MKUltra.MODID, "open_abilities")));
         def.addOption(new AttributesOption()
                 .addAttributeEntry(new NpcAttributeEntry(Attributes.MAX_HEALTH, 400.0))
                 .addAttributeEntry(new NpcAttributeEntry(MKAttributes.MAX_MANA, 400.0))
                 .addAttributeEntry(new NpcAttributeEntry(MKAttributes.MANA_REGEN, 10.0))
         );
-        def.addOption(new NameOption().setValue("Green Lady"));
+        def.addOption(new NameOption("Green Lady"));
         def.addOption(new NotableOption());
         def.addOption(new QuestOfferingOption(new ResourceLocation("mkultra", "intro_quest")));
-        def.addOption(MKUNpcGenUtils.GetSkillOptionForClass(MKUNpcGenUtils.NpcSkillClass.CLERIC));
+        def.addOption(MKUNpcGenUtils.getSkillOptionForClass(MKUNpcGenUtils.NpcSkillClass.CLERIC));
         return def;
     }
 
     private NpcDefinition generateGreenLadyGuard2() {
         NpcDefinition def = new NpcDefinition(new ResourceLocation(MKUltra.MODID, "green_lady_guard_2"),
                 MKUEntities.ORC_TYPE.getId(), null);
-        def.addOption(new FactionOption().setValue(MKUFactions.GREEN_KNIGHT_FACTION_NAME));
-        def.addOption(new MKSizeOption().setValue(1.1f));
-        def.addOption(new RenderGroupOption().setValue(MKUOrcs.GREEN_LADY_GUARD_2_NAME));
+        def.addOption(new FactionOption(MKUFactions.GREEN_KNIGHT_FACTION_NAME));
+        def.addOption(new MKSizeOption(1.1f));
+        def.addOption(new RenderGroupOption(MKUOrcs.GREEN_LADY_GUARD_2_NAME));
         def.addOption(new AbilitiesOption()
                 .withAbilityOption(MKUAbilities.SKIN_LIKE_WOOD.get(), 1, 1.0)
                 .withAbilityOption(MKUAbilities.NATURES_REMEDY.get(), 2, 1.0)
@@ -1203,7 +1203,7 @@ public class MKUNpcProvider extends NpcDefinitionProvider {
                 .addAttributeEntry(new NpcAttributeEntry(MKAttributes.MAX_MANA, 150.0))
                 .addAttributeEntry(new NpcAttributeEntry(MKAttributes.MANA_REGEN, 4.0))
         );
-        def.addOption(new NameOption().setValue("Green Guardian"));
+        def.addOption(new NameOption("Green Guardian"));
         EquipmentOption equipOption = new EquipmentOption();
         equipOption.addItemChoice(EquipmentSlot.HEAD,
                 new NpcItemChoice(new ItemStack(MKUItems.greenKnightHelmet.get()), 1.0, 0.05f));
@@ -1218,16 +1218,16 @@ public class MKUNpcProvider extends NpcDefinitionProvider {
                         new ResourceLocation("mkweapons:dagger_stone"))), 1.0, 0.0f));
         def.addOption(equipOption);
         def.addOption(new NotableOption());
-        def.addOption(MKUNpcGenUtils.GetSkillOptionForClass(MKUNpcGenUtils.NpcSkillClass.PALADIN));
+        def.addOption(MKUNpcGenUtils.getSkillOptionForClass(MKUNpcGenUtils.NpcSkillClass.PALADIN));
         return def;
     }
 
     private NpcDefinition generateGreenLadyGuard1() {
         NpcDefinition def = new NpcDefinition(new ResourceLocation(MKUltra.MODID, "green_lady_guard_1"),
                 MKUEntities.ORC_TYPE.getId(), null);
-        def.addOption(new FactionOption().setValue(MKUFactions.GREEN_KNIGHT_FACTION_NAME));
-        def.addOption(new MKSizeOption().setValue(1.1f));
-        def.addOption(new RenderGroupOption().setValue(MKUOrcs.GREEN_LADY_GUARD_1_NAME));
+        def.addOption(new FactionOption(MKUFactions.GREEN_KNIGHT_FACTION_NAME));
+        def.addOption(new MKSizeOption(1.1f));
+        def.addOption(new RenderGroupOption(MKUOrcs.GREEN_LADY_GUARD_1_NAME));
         def.addOption(new AbilitiesOption()
                 .withAbilityOption(MKUAbilities.SKIN_LIKE_WOOD.get(), 1, 1.0)
                 .withAbilityOption(MKUAbilities.NATURES_REMEDY.get(), 2, 1.0)
@@ -1241,7 +1241,7 @@ public class MKUNpcProvider extends NpcDefinitionProvider {
                 .addAttributeEntry(new NpcAttributeEntry(MKAttributes.MAX_MANA, 150.0))
                 .addAttributeEntry(new NpcAttributeEntry(MKAttributes.MANA_REGEN, 4.0))
         );
-        def.addOption(new NameOption().setValue("Green Knight"));
+        def.addOption(new NameOption("Green Knight"));
         EquipmentOption equipOption = new EquipmentOption();
         equipOption.addItemChoice(EquipmentSlot.HEAD,
                 new NpcItemChoice(new ItemStack(MKUItems.greenKnightHelmet.get()), 1.0, 0.05f));
@@ -1256,7 +1256,7 @@ public class MKUNpcProvider extends NpcDefinitionProvider {
                         new ResourceLocation("mkweapons:battleaxe_stone"))), 1.0, 0.0f));
         def.addOption(equipOption);
         def.addOption(new NotableOption());
-        def.addOption(MKUNpcGenUtils.GetSkillOptionForClass(MKUNpcGenUtils.NpcSkillClass.PALADIN));
+        def.addOption(MKUNpcGenUtils.getSkillOptionForClass(MKUNpcGenUtils.NpcSkillClass.PALADIN));
         return def;
     }
 
